--- a/code/feature-store.ipynb
+++ b/code/feature-store.ipynb
@@ -554,6 +554,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d355d39d-1452-46c9-9061-99c2866a81f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare data for feature store ingestion\n",
+    "features_required_new['number'] = features_required_new.index.astype('string')\n",
+    "features_required_new['event_time'] = pd.Timestamp.now().strftime('%Y-%m-%dT%H:%M:%SZ')\n",
+    "\n",
+    "features_required_new['event_time'] = features_required_new['event_time'].astype('string')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "e919b7ff-0697-490b-a696-7ac182c0ebdf",
    "metadata": {
